2013-03-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.800.0
	* DESCRIPTION: Updated Description to reflect change of Armadillo
	license to MPL 2.0 (which is fully compatible with GPL so no change
	or net effect to RcppArmadillo)

	* inst/include/*: Upgraded to new release 3.800.0 of Armadillo

	* inst/doc/RcppArmadillo-intro.Rnw: Updated vignette to preprint of
	the Computational Statistics & Data Analysis paper in press
	* inst/doc/*: Added or updated relevant support files

	* inst/CITATION: Added with reference to CSDA paper

2013-02-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.6.3

	* inst/include/*: Upgraded to new release 3.6.3 of Armadillo

2013-01-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.6.2

	* inst/include/*: Upgraded to new release 3.6.2 of Armadillo

2013-01-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/kalman/: New example used in the vignette

2012-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.6.1

	* inst/include/*: Upgraded to new release 3.6.1 of Armadillo

2012-12-10  Romain Francois <romain@r-enthusiasts.com>

	* include/RcppArmadillo.h: compiler error if Rcpp.h is included
	before RcppArmadillo.h

2012-12-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.6.0

	* inst/include/*: Upgraded to new release 3.6.0 of Armadillo

2012-11-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.4.4

	* inst/include/*: Upgraded to new release 3.4.4 of Armadillo

2012-10-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.4.3

	* inst/include/*: Upgraded to new release 3.4.3 of Armadillo

2012-09-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.4.2

	* inst/include/*: Upgraded to new release 3.4.2 of Armadillo

2012-09-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.4.1

	* inst/include/*: Upgraded to new release 3.4.1 of Armadillo
